tests/bad/minint.nx
x : int = minint - 1